<resources>
    <string name="app_name">KM Test SuitMedia</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="check">CHECK</string>
    <string name="next">NEXT</string>
    <string name="empty_input">Text is empty, must be filled first</string>
    <string name="is_palindrome">The text is Palindrome</string>
    <string name="not_palindrome">The text is not Palindrome</string>
    <string name="welcome">Welcome</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="choose_a_user">Choose a User</string>
</resources>